--- a/media/css/main.css
+++ b/media/css/main.css
@@ -32,7 +32,7 @@
       }
       td {
         height: 100px;
-
+    padding: 30px;
     background-color: rgb(255, 255, 255);
     align-content: center;
     vertical-align: middle;
